--- a/webapp/src/main/java/edu/isu/cs3321/Up_to_Code/app/index.html
+++ b/webapp/src/main/java/edu/isu/cs3321/Up_to_Code/app/index.html
@@ -4,7 +4,6 @@
 
 
 
-import axios from "axios";
 
 
 <head>
@@ -30,14 +29,7 @@ import axios from "axios";
 
 
 
-
-
-
--->
-
-<script type = "module">
-
-    import axios from "axios";
+import axios from "axios";
     const BASE_URL = 'http://localhost:7000';
 
     const getHello = async () => {
@@ -54,26 +46,14 @@ import axios from "axios";
         }
     };
 
+
+-->
+
+<script type = "module">
     new Vue({
         el:"#test",
         data:{
-
-                string: this.search()
-        },
-        created(){
-            this.search();
-        },
-        methods: {
-            search: function () {
-                fetch('http://localhost:7000/')
-                    .then(response => response.text())
-                    .then(text => {
-                        const data1 = text.result;
-                        this.string = data1;
-                    })
-
-
-            }
+                string: 'test'
         }
     })
 
