--- a/webapp/src/main/java/edu/isu/cs3321/Up_to_Code/app/index.html
+++ b/webapp/src/main/java/edu/isu/cs3321/Up_to_Code/app/index.html
@@ -3,9 +3,6 @@
 <html lang="en" xmlns:v-bind="http://www.w3.org/1999/xhtml">
 
 
-
-
-
 <head>
     <meta charset="UTF-8">
     <title>Essence Kernel Tools</title>
@@ -15,7 +12,11 @@
 <body id="body">
 
 <div id="test">
-    <h1>Test {{ testString }}</h1>
+    <h1>Test {{ testString }}
+
+
+
+    </h1>
 </div>
 <!--
 <script type="module">
